Improve Unmodifiable{Collection,Map}
Disperse some TLC:
- use j.u.Set.of() for constant
- expand the set of known-immutable classes
- add UnmodifiableCollection.of() as replacement for create()
- split out the class checking logic into a separate method

Change-Id: If0d0588dfb98593fcd0ff53ca50a6b8ffbce4745
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>