@@ -10,13 +10,15 @@ package org.opendaylight.yangtools.util;
 import static java.util.Objects.requireNonNull;
 
 import com.google.common.collect.ImmutableCollection;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterators;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Iterator;
+import java.util.List;
+import java.util.Set;
 import org.eclipse.jdt.annotation.NonNull;
 import org.gaul.modernizer_maven_annotations.SuppressModernizer;
 
@@ -32,13 +34,38 @@ import org.gaul.modernizer_maven_annotations.SuppressModernizer;
  * @param <E> the type of elements in this collection
  */
 public final class UnmodifiableCollection<E> implements Collection<E>, Serializable {
+    @java.io.Serial
     private static final long serialVersionUID = 1L;
-    private static final @NonNull Class<?> UNMODIFIABLE_COLLECTION_CLASS =
-        Collections.unmodifiableCollection(new ArrayList<>()).getClass();
-    private static final @NonNull ImmutableSet<Class<?>> SINGLETON_CLASSES = ImmutableSet.<Class<?>>builder()
-        .add(Collections.singleton(null).getClass())
-        .add(Collections.singletonList(null).getClass())
-        .build();
+    private static final @NonNull Set<Class<?>> SINGLETON_CLASSES;
+
+    static {
+        final var tmp = new HashSet<Class<?>>();
+        // sneaky access
+        tmp.add(Collections.unmodifiableCollection(new ArrayList<>()).getClass());
+        tmp.add(Collections.singleton(null).getClass());
+        tmp.add(Collections.singletonList(null).getClass());
+        // unmodifiable implementations: on OpenJDK 21 this these are:
+        // ListN
+        tmp.add(List.of().getClass());
+        // List12
+        tmp.add(List.of("a").getClass());
+        tmp.add(List.of("a", "b").getClass());
+        // ListN
+        tmp.add(List.of("a", "b", "c").getClass());
+        // ListN
+        tmp.add(List.of("a", "b", "c").subList(1, 2).getClass());
+        // SetN
+        tmp.add(Set.of().getClass());
+        // Set12
+        tmp.add(Set.of("a").getClass());
+        tmp.add(Set.of("a", "b").getClass());
+        // SetN
+        tmp.add(Set.of("a", "b", "c").getClass());
+        // TODO: and all that because we cannot see ImmutableCollections.AbstractImmutableCollection... hopefully that
+        //       becomes available once JEP-401 lands as a stable feature.
+
+        SINGLETON_CLASSES = Set.copyOf(tmp);
+    }
 
     private final @NonNull Collection<E> delegate;
 
@@ -47,23 +74,37 @@ public final class UnmodifiableCollection<E> implements Collection<E>, Serializa
     }
 
     /**
-     * Create an unmodifiable view of the target collection. If the instance is known
-     * to be unmodifiable, that instance is returned.
+     * Create an unmodifiable view of the target collection. If the instance is known to be unmodifiable, that instance
+     * is returned.
      *
      * @param collection Target collection
      * @return An unmodifiable view of the collection
      * @throws NullPointerException if {@code collection} is null
+     * @deprecated Use {@link #of(Collection)} instead
      */
-    @SuppressModernizer
+    @Deprecated(forRemoval = true, since = "15.0.0")
     public static <T> @NonNull Collection<T> create(final @NonNull Collection<T> collection) {
-        if (collection instanceof UnmodifiableCollection || collection instanceof ImmutableCollection
-                || Collections.EMPTY_LIST == collection || Collections.EMPTY_SET == collection
-                || UNMODIFIABLE_COLLECTION_CLASS.isInstance(collection)
-                || SINGLETON_CLASSES.contains(collection.getClass())) {
-            return collection;
-        }
+        return of(collection);
+    }
 
-        return new UnmodifiableCollection<>(collection);
+    /**
+     * Create an unmodifiable view of the target collection. If the instance is known to be unmodifiable, that instance
+     * is returned.
+     *
+     * @param collection Target collection
+     * @return An unmodifiable view of the collection
+     * @throws NullPointerException if {@code collection} is null
+     * @since 15.0.0
+     */
+    public static <T> @NonNull Collection<T> of(final @NonNull Collection<T> collection) {
+        return knownImmutable(collection) ? collection : new UnmodifiableCollection<>(collection);
+    }
+
+    @SuppressModernizer
+    private static boolean knownImmutable(final @NonNull Collection<?> collection) {
+        return collection instanceof UnmodifiableCollection || collection instanceof ImmutableCollection
+            || Collections.EMPTY_LIST == collection || Collections.EMPTY_SET == collection
+            || SINGLETON_CLASSES.contains(collection.getClass());
     }
 
     @Override
